NetBSD Problem Report #50525

From www@NetBSD.org  Fri Dec 11 09:44:15 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8337EA665F
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 09:44:15 +0000 (UTC)
Message-Id: <20151211094414.A8FC9A667F@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 09:44:14 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/emips/ebus/flash_ebus.c:606: bad comparison ?
X-Send-Pr-Version: www-1.0

>Number:         50525
>Category:       port-emips
>Synopsis:       src/sys/arch/emips/ebus/flash_ebus.c:606: bad comparison ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-emips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 09:45:00 +0000 2015
>Closed-Date:    Sun Dec 13 20:27:11 +0000 2015
>Last-Modified:  Sun Dec 13 20:27:11 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/arch/emips/ebus/flash_ebus.c:606]: (style) Expression '(X & 0xee) == 0x70' is always false.

Source code is

    if ((Status & ST_ERASE_MASK) ==
        (ST_LOCK_BIT_ERROR|ST_ERASE_SUSPENDED|ST_ERASE_ERROR)) {

but

#define ST_LOCK_BIT_ERROR    0x10
#define ST_ERASE_ERROR       0x20
#define ST_ERASE_SUSPENDED   0x40
#define ST_READY             0x80
#define ST_ERASE_MASK        0xee  /* bits to check after erase command */

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50525 CVS commit: src/sys/arch/emips/ebus
Date: Sun, 13 Dec 2015 14:36:40 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 19:36:40 UTC 2015

 Modified Files:
 	src/sys/arch/emips/ebus: flash_ebus.c

 Log Message:
 PR/50525: David Binderman: Fix incorrect test.


 To generate a diff of this commit:
 cvs rdiff -u -r1.17 -r1.18 src/sys/arch/emips/ebus/flash_ebus.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:27:11 +0000
State-Changed-Why:
christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.