PR/50525: David Binderman: Fix incorrect test.